--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,168 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Lato:wght@100;300;400&family=Open+Sans:wght@300;400;600;700&display=swap');
 
+
+.container {
+    width: 90%;
+    margin: auto;
+}
+
 * {
     font-family:'Arvo', serif;
     font-size: 16px;
     margin: 0
 }
 
-nav {
+header nav {
+    background-color: #000000;
+    padding: 10px 0;
+    
+}
+
+header nav div {
     display: flex;
     justify-content: space-between;
-    background-color: #000000;
+    align-items: center;
 }
 
-.container {
+header nav ul {
+    display: none;
+}
+
+.menu-icon {
+    width: 32px;
+    filter: invert(100%);
+}
+
+header section {
+    background-image: url(../images/hero-image.jpg);
+    background-size: cover; /* adapte la taille de l'image a son element*/
     text-align: center;
-
+    color: var(--white);
+    padding: 50px 0;
 }
 
+header section h1 {
+    font-size: 2rem;
+    margin-bottom: 50px;
+    font-weight: normal;
+}
 
+header section p {
+    font-size: 1.2rem;
+    margin-bottom: 50px;
+    font-weight: normal;
+}
+
+.btn-orange {
+    text-decoration: none;
+    color: var(--white);
+    font-size: 1.2rem;
+    background-color: var(--orange);
+    padding: 15px 25px;
+    border-radius: 6px;
+}
+
+.img-code {
+    display: block;
+    margin: auto;
+    padding-top: 50px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+/**
+*partie principale
+*/
+
+main {
+    text-align: center;
+    padding-top: 65px;
+}
+
+main section h2 {
+    color: var(--orange);
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+.separator {
+    border: 1px solid orange;
+    width: 130px;
+    margin: 20px auto;
+}
+
+main p {
+    font-size: 1.2rem;
+}
+
+main section:last-child {
+    background-color: var(--grey-light);
+    padding: 80px 0;
+    margin-top: 65px;
+}
+
+.orange {
+    color: orange;
+}
+
+/**
+* cards
+*/
+
+.cards .circle {
+    width: 100px;
+    height: 100px;
+    background-color: var(--black);
+    border-radius: 50%;
+    margin: 60px auto auto auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cards .circle img {
+    filter: invert(100%);
+    width: 60px;
+}
+
+.cards h3 {
+    font-size: 1.3rem;
+    color: var(--orange);
+    text-transform: uppercase;
+    margin: 10px 0;
+    font-weight: normal;
+}
+
+.btn-light {
+    text-decoration: none;
+    color: var(--orange);
+    background-color: var(--white);
+    padding: 8px 12px;
+    border-radius: 4px;
+    border: 1px solid var(--grey-light);
+}
+
+.cards p {
+    margin-bottom: 20px
+}
+
+/**
+* footer
+*/
+
+footer {
+    background-color: var(--orange);
+    padding: 150px 0 30px 0;
+}
+
+footer img {
+    width: 90%;
+}
